# wasm-test

./: PROJECT_CONCLUSION.md  PROJECT_SUMMARY.md  README.md  TEST_RESULTS_ANALYSIS.md
.github/workflows/: deploy.yml
docs/plans/: 2025-01-26-wasm-benchmark-framework-design.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: ConfigPanel.vue  ResultChart.vue
frontend/src/types/: index.ts
frontend/src/utils/: tree-generator.ts
frontend/src/workers/: test.worker.ts
frontend/src/workers/modules/: js-recursive.ts  wasm-binary.ts  wasm-crud.ts  wasm-js-object.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
